<resources>
    <string name="app_name">ThothLib</string>

    <!--  Strings do XML  -->
    <string name="register_description">Bem vindo, preencha campos abaixo para realizar o cadastro</string>
    <string name="fake_text">Programando com JavaScript</string>
    <string name="login_description">Faça login para acessar o nosso sistema.</string>
    <string name="register">Cadastrar</string>
    <string name="register_book">Cadastrar Livro</string>
    <string name="register_title">Cadastro</string>
    <string name="login_title">Login</string>
    <string name="login">Logar</string>
    <string name="login_account">Entrar</string>
    <string name="placeholder_name">Nome: Matheus Alencar Garcia</string>
    <string name="placeholder_cpf">CPF: 123.456.789.11</string>
    <string name="placeholder_email">Email: exemplo@email.com</string>
    <string name="placeholder_telefone">Telefone: (11)123456789</string>
    <string name="placeholder_password">Senha: *************</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="create_account">Ainda não tem conta?</string>
    <string name="already_regitered">Já possui uma conta?</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="wellcome">Bem vindo a \n ThothLib</string>
    <string name="catchphrase">Gestão inteigente é com a gente</string>
    <string name="menu_user">Perfil Usuário</string>
    <string name="menu_book_shelf">Pesquisa Livros</string>
    <string name="menu_email">Contate-nos</string>
    <string name="menu_question">Perguntas Frequentes</string>
    <string name="menu_list_user">Lista de Usuários</string>
    <string name="menu_add_book">Adicionar Livro</string>
    <string name="menu_add_book_text">Preencha os campos abaixo para adicionar um novo livro ao sistema</string>
    <string name="add_book_placeholder_titulo">Título</string>
    <string name="add_book_placeholder_autor">Autor</string>
    <string name="add_book_placeholder_editora">Editora</string>
    <string name="add_book_placeholder_edicao">Edição</string>
    <string name="add_book_placeholder_desc">Descrição</string>
    <string name="add_book_placeholder_qtde">Quantidade</string>
    <string name="menu_logout">Sair</string>
    <string name="ver_ranking">Ver Ranking</string>
    <string name="btn_send">Enviar</string>
    <string name="placeholder_description">Descrição</string>
    <string name="placeholder_subject">Informe o assunto</string>
    <string name="contact_description">Sugestões de livros, melhorias, críticas... Preencha o formulário abaixo para entrar em contato com a nossa equipe de atendimento!</string>
    <string name="contact_title">Enviar</string>
    <string name="Autor">Autor</string>
    <string name="InfoPrateleira">Prateleira</string>
    <string name="Data_Publi">data de publicação</string>
    <string name="Avaliação">Avaliação</string>
    <string name="Valor">Valor</string>
    <string name="fake_autor">David Flanagan</string>
    <string name="fake_prateleira">Z5</string>
    <string name="fake_data">jAVA</string>
    <string name="fake_avaliacao">10/10</string>
    <string name="fake_book_name">Nenhum livro reservado</string>
    <string name="fake_label_reserved_book">Livro reservado:</string>
    <string name="fake_active">Ativo</string>
    <string name="fake_label_status">Status:</string>
    <string name="fake_email">usuário@bandtec.com.br:</string>
    <string name="fake_label_email">Email:</string>
    <string name="fake_label_when_reserved">Linguagem do livro:</string>
    <string name="fake_label_when_give_back">Cor da etiqueta do livro:</string>
    <string name="send_email_button">Enviar email</string>
    <string name="extend_button">Prorrogar</string>
    <string name="fake_user_name">Usuário 03</string>
    <string name="btn_reserva">RESERVAR</string>
    <string name="btn_retirar">RETIRAR</string>
    <string name="btn_renovar">RENOVAR</string>
    <string name="btn_devolver">DEVOLVER</string>
    <string name="btn_comprar">COMPRAR</string>
    <string name="btn_baixar">BAIXAR</string>
    <string name="fake_descricao">JavaScript é a linguagem de programação da Web. A maioria dos sites modernos usa JavaScript, e todos os navegadores – em computadores de mesa, consoles de jogos, tablets e smartphones – incluem interpretadores JavaScript. Isso a torna uma das linguagens de programação mais importantes atualmente e uma das tecnologias que todo desenvolvedor Web deve conhecer</string>
    <string name="text_screen_devolucao">Devolução</string>
    <string name="text_screen_retirada">Retirada</string>
    <string name="text_screen_message_devolucao">Ops! Algo deu errado com a sua devolução, por favor, tente novamente. Caso o erro persista, entre em contato conosco.</string>
    <string name="text_screen_message_retirada">Ops! Algo deu errado com a sua retirada, por favor, tente novamente. Caso o erro persista, entre em contato conosco.</string>
    <string name="text_screen_tentar_novamente">Tentar Novamente</string>
    <string name="text_screen_contato">Contato</string>
    <string name="text_screen_reservar">Reservar Mais</string>
    <string name="text_screen_sucess_msg_devolucao">Sua devolução foi registrada no sistema com sucesso. Agora basta devolver o livro na posição</string>
    <string name="text_screen_sucess_msg_retirada">Sua retirada foi registrada no sistema com sucesso. Agora basta retirar o livro na posição</string>
    <string name="text_screen_points"><u>+ 10Pts</u></string>
    <string name="usuario_nivel">Usuário Nível</string>
    <string name="register_user">Usuários cadastrados</string>
    <string name="pendence">Pendência: </string>
    <string name="fake_book_search">Java SE 8 Programmer 1</string>
    <string name="fake_book_result">Exibindo 09 resultados para JavaSript</string>
    <string name="faq_question">Como faço para reservar um livro?</string>
    <string name="faq_question2">Qual o prazo de devolução dos livros?</string>
    <string name="faq_question3">Como devolver o livro?</string>
    <string name="faq_question4">Como encontrar o livro que eu quero?</string>
    <string name="faq_answer">Escolha o livro desejado e vá até a biblioteca desejada, após isso assinale a reserva do livro</string>
    <string name="faq_answer2">Após a reserva, há a opção de solicitar uma prorrogação no prazo. Mas por padrão, os livros tem o prazo de dez dias após a retirada</string>
    <string name="faq_answer3">Após acabar o tempo de reserva, você deve ir na biblioteca indicada para devolver o livro e marcar a devolução no App</string>
    <string name="faq_answer4">No aplicativo está indicado o local onde está o livro</string>
    <string name="fragPopup_prgSucess_title">Prorrogação feita com sucesso!</string>
    <string name="fragPopup_prhSucess_title">Reserva feita com sucesso!</string>
    <string name="fragPopup_prgSucess_text">Esperamos que aproveite bem esse tempo extra. \n \n Boa leitura!</string>
    <string name="fragPopup_reserve_Sucess_text">Esperamos que aproveite bem a sua escolha. \n \n Boa leitura!</string>
    <string name="fragPopup_prgSucess_btn">Meu perfil</string>
    <string name="fragPopup_infoBook_title">Programando com javaScript</string>
    <string name="fragPopup_infoBook_status">Status: </string>
    <string name="fragPopup_infoBook_status2">Disponível</string>
    <string name="fragPopup_infoBook_date">Devolver até: </string>
    <string name="fragPopup_infoBook_date2">25/06/22</string>
    <string name="fragPopup_infoBook_location">Localização: </string>
    <string name="fragPopup_infoBook_location2">03</string>
    <string name="fragPopup_infoBook_btn">Reservar</string>
    <string name="fragPopup_prgConfirm_text">Gostaria de mais tempo para ler? Você está prestes a prorrogar a data de entrega para o dia:</string>
    <string name="fragPopup_prgConfirm_date">25/06/22</string>
    <string name="fragPopup_prgConfirm_text2">Clique no botão abaixo para confirmar a prorrogação de devolução.</string>
    <string name="fragPopup_prgConfirm_btn">Aceitar</string>
    <string name="fragRanking_title">Ranking</string>
    <string name="fragRanking_name">Usuário 0001</string>
    <string name="fragRanking_pts">345 Pts</string>
    <string name="fragRanking_lvl">Nvl 12</string>

    <!--  Strings do Kotlin  -->
    <string name="auth_response">E-mail ou senha incorreto</string>
    <string name="error_API">Erro na api, entrar em contato com o suporte</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_card_fragment_title">Programando com javaScript</string>
    <string name="book_card_fragment_date">Devolver até:</string>
    <string name="book_card_fragment_reserve">Ver reserva</string>
    <string name="book_card_fragment_plus">Ver mais</string>
    <string name="book_search_filtro">Filtrar por: </string>
    <string name="status_user_inactive">Inativo</string>
    <string name="leitor_qr_code">Leitor QR Code</string>
    <string name="unavailable">Indisponível</string>
    <string name="prateleira_book">Prateleira</string>
    <string name="qr_code_title_withdraw">Retirada</string>
    <string name="qr_code_description_withdraw">Escaneie o QR code abaixo para realizar a retirada do livro.</string>
    <string name="qr_code_description_devolution">Escaneie o QR code abaixo para realizar a devolução do livro.</string>
    <string name="qr_code_btn_back_withdraw">Voltar</string>
    <string name="search_book">Pesquisar livro</string>
    <string name="status_livro">Livro já devolvido</string>
    <string name="withdraw_btn">Retirar</string>
    <string name="see_reserve_btn">Ver reserva</string>


</resources>
