<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/activity_simple_header"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string"
            android:textColor="@color/ligth_blue_color"
            android:layout_below="@+id/header"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="17dp"
            android:text="@string/login_description"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingHorizontal="50dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/description"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/ligth_grey"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/ligth_grey"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <Button
                android:id="@+id/entrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/login_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="browsePage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/ligth_grey"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account" />

                <TextView
                    android:id="@+id/cadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/register"
                    android:textColor="@color/dark_blue"
                    android:onClick="browsePage"/>

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>