<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/header"
            layout="@layout/activity_simple_header" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="20dp"
            android:text="@string/menu_add_book"
            android:textAlignment="center"
            android:textColor="@color/ligth_blue_color"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="17dp"
            android:paddingHorizontal="50dp"
            android:text="@string/menu_add_book_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/description"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:hint="@string/add_book_placeholder_titulo"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/et_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:hint="@string/add_book_placeholder_autor"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/et_editora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:hint="@string/add_book_placeholder_editora"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/et_edicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:hint="@string/add_book_placeholder_edicao"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:gravity="top"
                android:hint="@string/add_book_placeholder_desc"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <EditText
                android:id="@+id/et_quantidade"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_blue"
                android:gravity="center"
                android:hint="@string/add_book_placeholder_qtde"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp" />

            <Button
                android:id="@+id/entrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_blue"
                android:onClick="salvarLivro"
                android:text="@string/register_book"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>