<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InfoLivroFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/info_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="50dp"
                android:text="@string/fake_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/info_book_image"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:src="@mipmap/img_fake_b"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:textSize="19sp"
                        android:textColor="#32B9CD"
                        android:layout_marginStart="50dp"/>

                    <TextView
                        android:id="@+id/tv_autor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fake_autor"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/InfoPrateleira"
                        android:textSize="19sp"
                        android:textColor="#32B9CD"
                        android:layout_marginStart="110dp"/>

                    <TextView
                        android:id="@+id/tv_prateleira"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fake_prateleira"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="110dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Data_Publi"
                        android:textSize="19sp"
                        android:textColor="#32B9CD"
                        android:layout_marginStart="50dp"/>

                    <TextView
                        android:id="@+id/tv_data_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fake_data"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Avaliação"
                        android:textSize="19sp"
                        android:textColor="#32B9CD"
                        android:layout_marginStart="50dp"/>

                    <TextView
                        android:id="@+id/tv_avaliacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fake_avaliacao"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/reserve_button_info_livro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reserva"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="7dp"
                    android:textSize="12sp"
                    />



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_comprar"
                    android:layout_marginEnd="7dp"
                    android:textSize="12sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_baixar"
                    android:layout_marginEnd="7dp"
                    android:textSize="12sp"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fake_descricao"
                    android:textSize="13sp"
                    android:layout_margin="13dp"
                    android:justificationMode="inter_word"
                    android:textColor="#000000"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>