<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_popup"
    tools:context=".popups.UserPopupFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/close_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/close"
            android:layout_alignParentEnd="true"
            />

        <ImageView
            android:id="@+id/user_detail_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@mipmap/user_image" />

        <TextView
            android:id="@+id/user_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_detail_image"
            android:text="@string/fake_user_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_detail_name"
            android:padding="15dp">

            <TextView
                android:id="@+id/user_detail_label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fake_label_email"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/user_detail_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_label_email"
                android:text="@string/fake_email"
                android:textColor="@color/ligth_blue_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/user_detail_label_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_email"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:text="@string/fake_label_status"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/user_detail_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_label_status"
                android:text="@string/fake_active"
                android:textColor="@color/ligth_blue_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/user_detail_label_reserved_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_status"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:text="@string/fake_label_reserved_book"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/user_detail_reserved_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_label_reserved_book"
                android:text="@string/fake_book_name"
                android:textColor="@color/ligth_blue_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/user_detail_label_when_reserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_reserved_book"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:text="@string/fake_label_when_reserved"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/user_detail_when_reserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_label_when_reserved"
                android:layout_marginTop="-1dp"
                android:text="@string/fake_book_name"
                android:textColor="@color/ligth_blue_color"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/user_detail_label_when_give_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_when_reserved"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:text="@string/fake_label_when_give_back"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/user_detail_when_give_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_label_when_give_back"
                android:text="@string/fake_book_name"
                android:textColor="@color/ligth_blue_color"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_detail_when_give_back"
                android:orientation="vertical">

                <Button
                    android:id="@+id/user_detail_send_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/send_email_button"
                    android:textSize="17sp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"/>

                <Button
                    android:id="@+id/user_detail_extend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/extend_button"
                    android:textSize="17sp"
                    android:layout_marginHorizontal="30dp"/>

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>